--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="text-center py-5">
         <div class="container">
-            <h1 class="font-weight-normal pagehead py-3">KWADRAT</h1>
+            <h1 class="font-weight-normal pagehead py-3">KALKULUS</h1>
             <p class="font-weight-normal">Menghitung persamaan kuadrat,pertidaksamaan kuadrat dan pertidaksamaan linier.
             </p>
         </div>
