--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Web untuk menghitung persamaan kuadrat,pertidaksamaan kuadrat dan pertidaksamaan linier.">
-    <meta name="author" content="Abdul Hilman Thiusana, Muhammad Ridwan Pratama, Restuaji Eliansyah">
-    <title>Kwadrat</title>
+    <meta name="author" content="Raditya Reza Saputra">
+    <title>KALKULUS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/design.min.css">
 </head>
