--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Web untuk menghitung persamaan kuadrat,pertidaksamaan kuadrat dan pertidaksamaan linier.">
     <meta name="author" content="Raditya Reza Saputra">
     <title>KALKULUS</title>
+    <title>RADITYA REZA SAPUTRA</title>
+    <title>411231099</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/design.min.css">
 </head>
@@ -21,6 +23,8 @@
     <header class="text-center py-5">
         <div class="container">
             <h1 class="font-weight-normal pagehead py-3">KALKULUS</h1>
+            <h2 class="font-weight-normal pagehead py-3">RADITYA REZA SAPUTRA</h2>
+            <h3 class="font-weight-normal pagehead py-3">411231099</h3>
             <p class="font-weight-normal">Menghitung persamaan kuadrat,pertidaksamaan kuadrat dan pertidaksamaan linier.
             </p>
         </div>
